# BaleCrewBuilder

./: .env.example  .gitignore  PLACEMENT.md  README.md  alembic.ini  bale_crewai_bot_builder_proposal_v1_1.md  docker-compose.yml  pyproject.toml
ai/: CLAUDE.md  CODEX.md  README.md
app/: main.py
codex/: CODEX_CONTINUATION_BACKLOG.md  CODEX_HANDOFF.md  CODEX_REVIEW_NOTES.md  CODEX_RUNBOOK.md  README.md
docs/: api-reference.md  approval-gates.md  architecture-overview.md  developer-setup.md  generated-project-usage.md  generation-workflow.md  generator-modules.md  limitations-and-future-phases.md  sample-blueprints.md
tests/: conftest.py  test_alembic_scaffold_generation.py  test_approval_flow.py  test_artifact_download.py  test_artifact_storage_local.py  test_backend_endpoint_wiring_generation.py  test_backend_security_template_generation.py  test_backend_template_generation.py  test_bale_bot_handler_generation.py  test_bale_bot_template_generation.py  test_bale_webhook_registration_generation.py  test_blueprint_ai_flow.py  test_blueprint_generation_from_document.py  test_blueprint_validation.py  test_celery_worker_generation.py  test_crewai_documentation_flow.py  test_db_models.py  test_document_generation_failure.py  test_document_generation_flow.py  test_document_generation_gate.py  test_document_review_flow.py  test_document_routes.py  test_document_upload_extraction.py  test_documents_api.py  test_e2e_sample_generation.py  test_frontend_field_driven_pages.py  test_frontend_template_generation.py  test_generation_gate.py  test_generation_runs_api.py  test_generation_service.py  test_generator_core.py  test_health.py  (+6 more)
(+154 files in other folders)
